--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,12 +9,11 @@
     "sourceMap": true,
     "strict": true,
     "outDir": "dist",
-    "baseUrl": "./",
+    "baseUrl": ".",
     "paths": {
-      "*": ["src/"]
+      "*": ["node_modules/*"]
     },
     "declaration": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "include": ["src/**/*"]
 }
