--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/node": "^12.12.5",
+    "@types/node-fetch": "^2.5.3",
     "@types/yargs": "^13.0.3",
     "dotenv": "^8.2.0",
     "eslint": "^6.6.0",
