--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "form-data": "^2.5.1",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "yargs": "^14.2.0"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
@@ -28,7 +29,6 @@
     "@types/yargs": "^13.0.3",
     "eslint": "^6.6.0",
     "ts-node": "^8.4.1",
-    "typescript": "^3.6.4",
-    "yargs": "^14.2.0"
+    "typescript": "^3.6.4"
   }
 }
