--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sansumbrella/mapbox-tilesets",
+  "name": "@mbxsolutions/mapbox-tilesets",
   "version": "0.1.3",
   "description": "scripts for working with the Mapbox tilesets API",
   "main": "dist/index.js",
@@ -30,5 +30,8 @@
     "eslint": "^6.6.0",
     "ts-node": "^8.4.1",
     "typescript": "^3.6.4"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   }
 }
